force-app/main/default/objects/cpm__Payment__c/fields/cpm__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Acceptgiro</fullName>
            </value>
            <value>
                <fullName>Credit Transfer</fullName>
            </value>
            <value>
                <fullName>Bollettino Postale</fullName>
            </value>
            <value>
                <fullName>OGM</fullName>
            </value>
            <value>
                <fullName>CreditCard</fullName>
            </value>
            <value>
                <fullName>Ideal</fullName>
            </value>
            <value>
                <fullName>SEPA Direct Debit</fullName>
            </value>
            <value>
                <fullName>BACS Direct Debit</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>