force-app/main/default/objects/cpm__Payment__c/fields/cpm__Target__c.field-meta.xml
<CustomField>
    <fullName>cpm__Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cpm__Payment_Processor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sepa Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>