force-app/main/default/objects/cpm__Payment__c/fields/SFFR_Bank_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Deposit_Date__c</fullName>
    <label>Bank Deposit Date</label>
    <type>Date</type>
</CustomField>