force-app/main/default/objects/cpm__Payment__c/fields/SFFR_Bank_Group__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Group__c</fullName>
    <description>Internal field copied from Instalment</description>
    <inlineHelpText>Internal field copied from Instalment</inlineHelpText>
    <label>Bank Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>