force-app/main/default/objects/cpm__Payment__c/fields/SFFR_Bank_Group_Automated__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Group_Automated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal field copied from Instalment</description>
    <inlineHelpText>Internal field copied from Instalment</inlineHelpText>
    <label>Bank Group Automated</label>
    <type>Checkbox</type>
</CustomField>