force-app/main/default/objects/cpm__Payment__c/fields/SFFR_Bank_Payment_Group_Automation__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Payment_Group_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked Payment group automation will try to create a bank group if SFFR_Bank_Payment_Group__c is null</description>
    <label>Bank Payment Group (automation)</label>
    <type>Checkbox</type>
</CustomField>