force-app/main/default/objects/cpm__Payment__c/fields/SFFR_Bank_Payment_Group_Internal__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Payment_Group_Internal__c</fullName>
    <description>System field used to group payment together from the flow automation</description>
    <label>Bank Payment Group (Internal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>