force-app/main/default/objects/cpm__Payment__c/fields/SFFR_Master_Payment__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Master_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Master Payment indicate that this Payment as related Split Payment.</description>
    <label>Master Payment</label>
    <type>Checkbox</type>
</CustomField>