force-app/main/default/objects/cpm__Payment__c/fields/SFFR_Payment_Group__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Payment_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Group</label>
    <referenceTo>SFFR_Payment_Group__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>GroupOfPayments</relationshipName>
    <type>Lookup</type>
</CustomField>