force-app/main/default/objects/cpm__Payment__c/recordTypes/SFFR_Payment.recordType-meta.xml
<RecordType>
    <fullName>SFFR_Payment</fullName>
    <active>true</active>
    <description>Master payment that regroup 0-N payment split</description>
    <label>Payment</label>
</RecordType>