force-app/main/default/objects/cpm__Payment__c/recordTypes/SFFR_Split.recordType-meta.xml
<RecordType>
    <fullName>SFFR_Split</fullName>
    <active>true</active>
    <label>Split</label>
</RecordType>