force-app/main/default/objects/cpm__Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SFFR_Master_Payment__c</columns>
    <columns>NAME</columns>
    <columns>cpm__Payment_Reference__c</columns>
    <columns>cpm__Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>cpm__Payment_Method__c</columns>
    <columns>cpm__Collection_Date__c</columns>
    <columns>cpm__Contact__c</columns>
    <columns>SFFR_Bank_Payment_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>